--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 {% include header.html %}
-<div class="article-wrapper">
-    <article class="single__article">
+<article class="article-wrapper">
         <hgroup class="article__header">
             <h1 class="article__headline">{{ page.title}}</h1>
-            <time pubdate="{{ post.time }}">{{ page.date }}</time> 
+            <time class="article__date-time" pubdate="{{ page.date | date_to_rfc822 }}">{{ page.date | date_to_long_string }}</time> 
             {% if page.category %} 
                 <span class="article__category">{{ page.category }}</span>
             {% endif %}
@@ -12,7 +11,5 @@
         <section class="article__body">
             {{ content }}
         </section>
-    </article>
-    }
-</div>
+</article>
 {% include footer.html %}
