--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,29 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% if post.title %} {{ post.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design, Music and Writings </title>
+    <title>{% if page.title %} {{ page.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design, Music and Writings </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/style.css">    
+
+	<meta dns-prefetch="http://fonts.google.com" />
+	<link rel="stylesheet" type="text/css" href="{{site.url}}/assets/css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="{{site.url}}/assets/js/jquery.js"></script>
+	<script type="text/javascript" src="{{site.url}}/assets/js/pentizr.js"></script>
 </head>
 <body>
+<aside class="main-sidebar">
+	<img src="{{site.url}}/assets/img/workbench.jpg" class="main-sidebar__img--background" />
+	<img src="{{site.url}}/assets/img/kevin.jpeg" class="main-sidebar__img--avatar" />
+	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
+	<p class="main-sidebar__description">I'm a self-thaught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
+	<ul class="nav">
+		<li class="nav__item"><a href="cv">CV</a></li>
+		<li class="nav__item"><a href="/blog">Blog</a></li>
+		<li class="nav__item"><a href="http://atarijunge.tumblr.com">Tumblr</a></li>
+	</ul>
+
+</aside>
+</head>
+<body>
+<section class="main-content">
