updating layout, adding archive and CV

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,12 @@
 	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
 	<p class="main-sidebar__description">I'm a self-thaught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
 	<ul class="nav">
-		<li class="nav__item"><a href="cv">CV</a></li>
-		<li class="nav__item"><a href="/blog">Blog</a></li>
-		<li class="nav__item"><a href="http://atarijunge.tumblr.com">Tumblr</a></li>
+		<li class="nav__item"><a href="/">Home</a></li>
+		<li class="nav__item"><a href="/cv/">CV</a></li>
+		<li class="nav__item"><a href="/archive/">Archive</a></li>
 	</ul>
 
 </aside>
 </head>
 <body>
-<section class="main-content">
+<section class="main-content {% if page.customclass %} {{page.customclass}} {% endif %}">
