--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -271,3 +271,29 @@ a {
 		}
 
 }
+
+/*
+	RESPONSIVE 
+*/
+
+@media all and (max-width: 60em) {
+	.main-sidebar {
+	width:100%;
+	height:auto;
+	margin: -3.5em 0 5em 0;
+	position: relative;
+	}
+
+
+	.main-content {
+	height: auto;
+	width: 100%;
+	margin: 2.5em auto;
+	padding: 1.5em 2.5em;
+	}
+
+	.article-wrapper {
+    margin: 2.5em 0 0 0;
+    width: 100%;
+}
+}
