Changed and improved, added first parts of Jekyll-Guide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <body>
 <aside class="main-sidebar">
 	<img src="/assets/img/workbench.jpg" class="main-sidebar__img--background" />
-	<img src="/assets/img/kevin.jpeg" class="main-sidebar__img--avatar" />
+	<img src="/assets/img/kevin_august_13.jpeg" class="main-sidebar__img--avatar" />
 	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
 	<p class="main-sidebar__description">I'm a self-thaught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
 	<ul class="nav">
