--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include header.html %}
-<div class="page-wrapper">
-        <section class="page__body">
+<div class="article-wrapper">
+        <section class="article__body">
             <h1>{{page.title}}</h1>
             {{ content }}
         </section>
