--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
     <title>{% if page.title %} {{ page.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design, Music and Writings </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
 	<meta dns-prefetch="http://fonts.google.com" />
+
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="/assets/js/jquery.js"></script>
@@ -15,7 +15,7 @@
 <body>
 <aside class="main-sidebar">
 	<img src="/assets/img/workbench.jpg" class="main-sidebar__img--background" />
-	<img src="/assets/img/kevin_august_13.jpeg" class="main-sidebar__img--avatar" />
+	<a href="/"><img src="/assets/img/kevin_august_13.jpeg" class="main-sidebar__img--avatar" /></a>
 	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
 	<p class="main-sidebar__description">I'm a self-thaught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
 	<ul class="nav">
