first post, new permalinks, header/sidebar changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 		<li class="nav__item"><a href="/cv/">CV</a></li>
 		<li class="nav__item"><a href="/archive/">Archive</a></li>
 	</ul>
-
+	<p class="description--small">Build with <a href="http://jekyllrb.com">Jekyll</a>. The source code can be found on <a href="https://github.com/kevingimbel/kevingimbel.github.io/">Github</a>.</p>
 </aside>
 </head>
 <body>
