--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -40,6 +40,11 @@
 
     <section class="codepen">
         <h2 class="single-section__header--headline">Codepen</h2>
+        <p>You can see some of my latest web-related experiments on my <a href="http://codepen.io/kevingimbel">CodePen</a> Profile.</p>
+    </section>
+<!-- 
+    <section class="codepen">
+        <h2 class="single-section__header--headline">Codepen</h2>
         <div class="my-pens"></div>
     <script type="text/javascript">
   $(function() {
@@ -68,4 +73,5 @@
   });
 </script>
     </section>
+    -->
 {% include footer.html %}
