--- a/assets/css/_includes/_sidebar.scss
+++ b/assets/css/_includes/_sidebar.scss
@@ -5,6 +5,7 @@
 	top:0;
 	left:0;
 	border-right:1px solid darken(#fff,30%);
+	text-align: center;
 }
 .main-sidebar__img--background {
 	width:100%;
