--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %} {{ page.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design, Music and Writings </title>
+    <title>{% if page.title %} {{ page.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design and Music</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 	<meta dns-prefetch="http://fonts.google.com" />
