Nur ein "h" in "taught" :)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 	<img src="/assets/img/workbench.jpg" class="main-sidebar__img--background" />
 	<a href="/"><img src="/assets/img/kevin_august_13.jpeg" class="main-sidebar__img--avatar" /></a>
 	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
-	<p class="main-sidebar__description">I'm a self-thaught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
+	<p class="main-sidebar__description">I'm a self-taught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
 	<ul class="nav">
 		<li class="nav__item"><a href="/">Home</a></li>
 		<li class="nav__item"><a href="/cv/">CV</a></li>
