--- a/assets/css/_includes/_article.scss
+++ b/assets/css/_includes/_article.scss
@@ -1,6 +1,7 @@
 .article-wrapper {
     margin: 2.5em 0 2.5em 2.5em;
     width: 100%;
+    height: auto;
     max-width: 40em;
     font-size:120%;
 }
