--- a/assets/css/_includes/_article.scss
+++ b/assets/css/_includes/_article.scss
@@ -1,5 +1,5 @@
 .article-wrapper {
-    margin: 2.5em 0 2.5em 2.5em;
+    margin: 1em 0 2.5em 2.5em;
     width: 100%;
     height: auto;
     max-width: 40em;
@@ -8,6 +8,7 @@
 
 .article__header {
     padding: 1.5em 0;
+    margin: 1.5em 0;
     border-bottom:1px solid $accentColor;
 }
 
@@ -30,9 +31,13 @@
 }
 
 .article__body {
-    h3,h4,h5,h6,p {
-        padding: 1em 0;
+    h3,h4,h5,h6 {
+        padding: 1em 0 0 0;
+    }
+
+    p {
         line-height: 1.2em;
+        padding: 0 0 1em 0;
     }
 
     blockquote {
@@ -46,6 +51,7 @@
         background: #f1f1f1;
         padding: .2em;
         @include border-radius(3px);
+        margin: 1em 0;
     }
 
     pre > code {
@@ -69,4 +75,24 @@
     margin:.5em 0 .5em 0;
     padding: .5em 0 1em 0;
     border-bottom:1px solid $grey;
+}
+
+.further-reading, .contributed-links {
+    margin: 1.5em 0;
+}
+.further-reading--headline, .contributed-links--headline {
+    margin: 0 0 .5em 0;
+    line-height: 1.2em;
+    &:before {
+        content:'';
+        position: absolute;
+        bottom:-.25em;
+        left: 0;
+        width: 4em;
+        height: 1px;
+        background: $grey;
+    }
+}
+.further-reading--list, .contributed-links--list {
+
 }
