--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <aside class="main-sidebar">
-	<img src="/assets/img/workbench.jpg" class="main-sidebar__img--background" />
+	<img src="/assets/img/architecture.jpg" class="main-sidebar__img--background" />
 	<a href="/"><img src="/assets/img/kevin_august_13.jpeg" class="main-sidebar__img--avatar" /></a>
 	<h1 class="main-sidebar__headline">Kevin Gimbel</h1>
 	<p class="main-sidebar__description">I'm a self-taught Front-End Developer with a passion for UI/UX, Technology and Photography.</p>
