--- a/_v1/_layouts/archive.html
+++ b/_v1/_layouts/archive.html
@@ -1,15 +1,14 @@
 {% include header.html %}
-<section class="single__page">
+
 <h1>Archives</h1>
 
  {% for post in site.posts %}
- 		<article class="single__article--archive"></article>
+            <div class="latest-posts__single-post--archive">
                 <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
+                <time class="article__date-time" pubdate="{{ post.date | date_to_rfc822 }}">{{ post.date | date_to_long_string }}</time> 
                 {% if post.category %} 
                     <span class="article__category">{{ post.category }}</span>
                 {% endif %}
             </div>
-        </article>
         {% endfor %}
-</section>
 {% include footer.html %}
