--- a/_v1/_layouts/default.html
+++ b/_v1/_layouts/default.html
@@ -1,9 +1,9 @@
 {% include header.html %}
-<section class="single__page">
-        <div class="article__body">
+<div class="article-wrapper">
+        <section class="article__body">
             <h1>{{page.title}}</h1>
             {{ content }}
-        </div>
+        </section>
+    </article>
 </div>
-</section>
 {% include footer.html %}
