--- a/_v1/_layouts/post.html
+++ b/_v1/_layouts/post.html
@@ -1,7 +1,8 @@
 {% include header.html %}
-<article class="single__article">
+<article class="article-wrapper">
         <hgroup class="article__header">
-            <h1 class="single__article--headline">{{ page.title}}</h1>
+            <h1 class="article__headline">{{ page.title}}</h1>
+            <time class="article__date-time" pubdate="{{ page.date | date_to_long_string }}">{{ page.date | date_to_long_string }}</time> 
             {% if page.category %} 
                 <span class="article__category">{{ page.category }}</span>
             {% endif %}
