First improvments and fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
       <img src="http://kevingimbel.com/assets/img/kevin_august_13.jpeg" alt="Kevin Gimbel - Face" class="info__box--avatar" />
     </a>
     <div class="phrase">
+    <h1 class="ohai">Kevin Gimbel</h1>
           <span>I'm a self-taught Front-End Developer with a passion for UI/UX, Technology and Photography.</span>
     </div>
   </div>
