--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -3,7 +3,7 @@
 {% for post in site.posts limit:5 %}
 <article class="single__article">
   <hgroup>
-  <a href="{{post.url}}" class="single__article--headline"><h1>{{ post.title }}</h1></a>
+  <a href="{{post.url}}"><h2 class="single__article--headline">{{ post.title }}</h2></a>
   {% if post.category %} 
     <span class="article__category">{{ post.category }}</span>
   {% endif %}</hgroup>
