--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,7 @@ body,html {
   background:black;
   font-family: $baseFont;
   overflow-x:hidden;
+  line-height: 1.65em;
 }
 
 a {
@@ -82,22 +83,30 @@ a {
   margin:$emw--unit-epsilon*2 0;
 }
 
+.ohai {
+  font-size: 90%;
+  border-bottom: 1px solid lighten($emw--color-epsilon,20%);
+  padding:0 0 $emw--unit-alpha;
+  margin:0 0 $emw--unit-alpha 0;
+}
+
 .info__box {
   width:100%;
   height:auto;
-  background:rgba(white,.6);
+  background:rgba(white,.8);
   padding:$emw--unit-delta;
   letter-spacing:-0.31em;
 }
 
 .site-navigation {
   width: 100%;
-  background: rgba($emw--color-alpha,.6);
+  background: rgba($emw--color-alpha,.8);
   padding: 1.5em 1em;
   a {
     color:#fff;
     &:hover {
-      color:$emw--color-epsilon;
+      border-bottom:1px solid #fff;
+      padding-bottom: .3em;
     }
   }
 }
@@ -125,7 +134,7 @@ a {
 }
 
 .info__box--avatar {
-  width:5em;
+  width:7em;
   height:auto;
   display:inline-block;
   
@@ -149,7 +158,7 @@ a {
               background:$emw--color-alpha;
     }
   }
-  h1 {
+  h2, .single__article--headline {
     padding:$emw--unit-gamma;
     background:transparent;
     &:after {
@@ -179,7 +188,17 @@ a {
       } // end of h1
   }
   
-  p {padding:$emw--unit-epsilon $emw--unit-gamma;}
+  p {
+    padding:$emw--unit-gamma;
+  }
+
+  h2,h3,h4,h5,h6 {
+    padding: $emw--unit-epsilon $emw--unit-gamma 0 $emw--unit-gamma;
+  }
+
+  .highlight{
+    margin: $emw--unit-gamma;
+  }
 }
 
 .page--cv {
@@ -197,10 +216,34 @@ a {
   }
 }
 
+.page--imprint {
+  h3 {
+    padding: $emw--unit-epsilon $emw--unit-gamma $emw--unit-gamma $emw--unit-gamma;  
+    border-bottom: 1px solid $emw--color-alpha;
+    margin:0 0 $emw--unit-beta 0;  
+  }
+  h4 {
+    padding:0 $emw--unit-gamma 0 $emw--unit-gamma;
+  }
+
+  p {
+    padding: $emw--unit-gamma;
+  }
+
+ul,li  {
+  width: 100%;
+  display: block;
+  padding: 0 $emw--unit-gamma 0 $emw--unit-gamma;
+}
+
+
+
+}
+
 .article__category {
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: $emw--unit-gamma;
   padding: .5em 1em;
   background: $emw--color-epsilon;
   color:#fff;
