--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -120,7 +120,7 @@ a {
   content:"\e705";
   font-family: 'entypo', sans-serif;
   position:absolute;
-  right:0;
+  right:-.2em;
   top:0;
   font-size: .8em;
 }
@@ -198,6 +198,12 @@ a {
 
   .highlight{
     margin: $emw--unit-gamma;
+  }
+
+  ul,li  {
+    width: 100%;
+    display: block;
+    padding: 0 $emw--unit-gamma 0 $emw--unit-gamma;
   }
 }
 
