--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,14 +1,14 @@
 {% include header.html %}
 <section class="single__page">
-<h1>Archives</h1>
+<h2>Archives</h2>
 
  {% for post in site.posts %}
- 		<article class="single__article--archive"></article>
+ 		<article class="single__article--archive">
                 <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
                 {% if post.category %} 
                     <span class="article__category">{{ post.category }}</span>
                 {% endif %}
-            </div>
+
         </article>
         {% endfor %}
 </section>
